Fix columns panel expansion/overflow

--- a/rust/perspective-vieux/src/less/perspective-vieux.less
+++ b/rust/perspective-vieux/src/less/perspective-vieux.less
@@ -48,7 +48,9 @@
         position: relative;
         flex: 0 0 auto;
         padding: var(--side_panel--padding, 10px 2px 0px 11px);
-
+        box-sizing: border-box;
+        width: 100%;
+        
         #plugin_selector_container {
             min-height: 29px;
             margin-left: var(--column_selector--width, 20px);
